# Fractal

./: .gitignore  CMakeLists.txt  Init.cmake
ext/nano/: nano.cmake
ext/qt/: CMakeLists.txt.in  qt.cmake  qt.old.cmake
findcmake/: FindSDL2.cmake
src/cpp/: fractalWidget.cpp  fractalWidget.hpp  fractal_widget.cpp  main.cpp  mainWindow.hpp  main_window.cpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp
src/opengl/: fractal.fs  fractal.vs
